rnsc/tests/snapshots/error-parser-super_directive-trailing_token.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----

.class MyClass

.super java/lang/String java/lang/Other ; trailing tokens, but should note about multiple inheritance as well
----- STDERR -----
[E-012] Error: unexpected trailing tokens after super class definition
   ╭─[ test_data/rns_integration/error/parser/super_directive/trailing_token.rns:4:25 ]
   │
 4 │ .super java/lang/String java/lang/Other ; trailing tokens, but should note about multiple inheritance as well
   │                        │───────┬───────  
   │                        ╰───────────────── expected end of super class definition here
   │                                │         
   │                                ╰───────── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-012
───╯
----- HASH -----
not generated
