rnsc/tests/snapshots/error-parser-type_hints-class-no_operand_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class   @class       ; no operand provided
yahoooooo ; <- should be still reported as an error
----- STDERR -----
[E-014] Error: '@class' type hint is missing its class name
   ╭─[ test_data/rns_integration/error/parser/type_hints/class/no_operand_recovers.rns:1:10 ]
   │
 1 │ .class   @class       ; no operand provided
   │          ───┬──│ 
   │             ╰──── forces explicit class constant pool type
   │                │ 
   │                ╰─ but class name is missing
   │ 
   │ Help: Provide the value immediately after the hint:
   │       @class <class_name>
   │       
   │       For example:
   │       @class java/lang/Object
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-014
───╯
[E-007] Error: unexpected identifier class body
   ╭─[ test_data/rns_integration/error/parser/type_hints/class/no_operand_recovers.rns:2:1 ]
   │
 2 │ yahoooooo ; <- should be still reported as an error
   │ ────┬────  
   │     ╰────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-007
───╯
----- JAVAP -----
not generated
