rnsc/tests/snapshots/error-parser-type_hints-cp_idx-trailing_tokens.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public MainClass
.super @cp_idx 42 42 ; explicit constant pool index
----- STDERR -----
[E-013] Error: unexpected trailing tokens after type hint '@cp_idx'
   ╭─[ test_data/rns_integration/error/parser/type_hints/cp_idx/trailing_tokens.rns:2:19 ]
   │
 2 │ .super @cp_idx 42 42 ; explicit constant pool index
   │        ───┬───    ─┬  
   │           ╰─────────── '@cp_idx' type hint takes 1 operand
   │                    │  
   │                    ╰── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-013
───╯
----- HASH -----
not generated
